Fixing entering and exiting of timeline points on mobile

--- a/src/Containers/TimelineContainer/TimelineContainer.css
+++ b/src/Containers/TimelineContainer/TimelineContainer.css
@@ -26,7 +26,7 @@
 	position: absolute;
 	background-color: white;
 	border-radius: 10px;
-	width: calc(85% - 2*16px - 2*20px);
+	width: calc(85% - 2*16px - 2*22px);
 	padding: 16px;
 	text-align: center;
 }
